--- a/pokedex-typeScript/package.json
+++ b/pokedex-typeScript/package.json
@@ -10,17 +10,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/jest": "^29.5.3",
+    "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^6.0.4",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "@vitejs/plugin-react": "^4.0.1",
-    "eslint": "^8.44.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "jest-environment-jsdom": "^29.6.1",
+    "jest-styled-components": "^7.1.1",
+    "prettier": "^3.0.0",
     "vite": "^4.4.0"
   }
 }
