--- a/pokedex-typeScript/package.json
+++ b/pokedex-typeScript/package.json
@@ -2,7 +2,6 @@
   "name": "pokedex-typescript",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,12 +12,14 @@
     "@babel/preset-typescript": "^7.22.5",
     "@types/jest": "^29.5.3",
     "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.4",
@@ -37,6 +38,8 @@
     "jest-environment-jsdom": "^29.6.1",
     "jest-styled-components": "^7.1.1",
     "prettier": "^3.0.0",
+    "tailwind-styled-components": "^2.2.0",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.0"
   }
 }
